Add unit tests for Notification, SensorController, SensorDataService